<package>
  <name>alarm</name>
  <version>0.0.1</version>
  <description>alarm</description>
  <maintainer email="francisco.bonin@uib.es">Francesc Bonin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/alarm</url>

  <author>Francesc Bonin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend> 
  <build_depend>auv_sensor_msgs</build_depend> 
  <build_depend>rospy</build_depend> 
  <build_depend>roscpp</build_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>auv_sensor_msgs</run_depend> 
  <run_depend>rospy</run_depend> 
  <run_depend>roscpp</run_depend> 
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>auv_sensor_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->

  <export>

  </export>
</package>
